@@ -100,6 +100,8 @@ BUGFIXES:
   ZOOKEEPER-2360: Update commons collections version used by tests/releaseaudit
   (phunt via cnauroth)
 
+  ZOOKEEPER-2243: Supported platforms is completely out of date (cnauroth)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-2270: Allow MBeanRegistry to be overridden for better unit tests
